[tool.poetry]
name = "evm-native-checker"
version = "0.1.0"
description = "EVM链批量地址余额查询工具"
authors = ["ylx <cryptostar@163.com>"]
readme = "README.md"
packages = [{include = "EVM_native_checker"}]

[tool.poetry.scripts]
evm-native-checker = "EVM_native_checker.cli:main"

[tool.poetry.dependencies]
python = "^3.8.1"
web3 = "^6.0.0"
requests = "^2.25.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true


